# TypeErasureExamples

./: .gitignore
DatabaseHandleWithFake/: CMakeLists.txt  DatabaseHandleWithFake  README  TestDatabaseHandleWithFake  main.cpp
DatabaseHandleWithFake/src/: main.cpp  test.cpp
DatabaseHandleWithFake/src/database/: database_handle.cpp  database_handle.h  database_handle.test.cpp  database_handle.test.hpp  database_handle_fake.cpp  database_handle_fake.h  database_handle_fake.test.cpp  database_handle_fake.test.hpp  database_view.cpp  database_view.h  database_view.test.hpp
